# yuva

./: .editorconfig  .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: abi-conformance.yml  bench.yml  ci.yml  clippy.yml  conductor-host.yml  conductor-m18neg.yml  corpus-export.yml  kani.yml  l2-nested-vmx.yml  m32-local-infer.yml  microvm-kvm.yml  miri.yml  real-infer.yml  vmm-boot.yml
bench/nano-guest/: .gitignore  Cargo.toml  README.md  build.sh  fc-axisA-config.json  nano-guest.S  nano-guest.ld
bench/nano-guest/.cargo/: config.toml
bench/nano-guest/src/: main.rs
crates/brand/: Cargo.toml
crates/brand/src/: lib.rs
crates/tb-boot/: Cargo.toml
crates/tb-boot/src/: aarch64.rs  lib.rs
crates/tb-caps-core/: Cargo.toml
crates/tb-caps-core/src/: lib.rs  proofs.rs  rights.rs  table.rs
crates/tb-encode/: Cargo.toml
crates/tb-encode/src/: abi.rs  admit.rs  attest.rs  bakeoff.rs  blkfmt.rs  conductor.rs  corpus.rs  el2_trap.rs  exittel.rs  exp.rs  explore.rs  guestlog.rs  inferwire.rs  ipc_frame.rs  kancell.rs  khash.rs  lib.rs  lmsig.rs  memscore.rs  opframe.rs  opframe_rx.rs  paging.rs  proofs.rs  prov.rs  provhead.rs  recall.rs  route.rs  sha256.rs  smmuv3.rs  stage2.rs  tpsched.rs  vmx.rs
crates/tb-hal/: Cargo.toml
crates/tb-hal/src/: blocks.rs  caps.rs  heap.rs  infer.rs  ipc.rs  lib.rs  mem.rs  mmu.rs  pmm.rs  verified_leaf.rs
crates/tb-hal/src/arch/: mod.rs
crates/tb-hal/src/arch/aarch64/: boot.rs  diag.rs  el2.rs  el2_nested_vectors.rs  el2_vectors.rs  el2_vgic_vectors.rs  el2mmio.rs  el2vgic.rs  exits.rs  exits_vectors.rs  inguest.rs  mmu.rs  mod.rs  pmm.rs  sched.rs  serial.rs  smmu.rs  stage2.rs  timer.rs  tpsched_hal.rs  trap.rs  uaccess.rs  user.rs  vectors.rs  virtio.rs
crates/tb-hal/src/arch/aarch64/el2/: l20_smoke.rs  l21_stage2.rs  l22_exits.rs  l23_trap.rs  l24_nested.rs  l24b_guest.rs  l25_vgic.rs  mod.rs
crates/tb-hal/src/arch/x86_64/: boot.rs  gdt.rs  idt.rs  mmu.rs  mod.rs  pmm.rs  sched.rs  serial.rs  timer.rs  trap.rs  uaccess.rs  user.rs  virtio.rs
crates/tb-hal/src/arch/x86_64/vmx/: controls.rs  ept.rs  exit.rs  mod.rs  vmcs.rs  vmxon.rs  world_switch.rs
crates/tb-hal/src/mem/: engine.rs  mod.rs  organ.rs  selftests.rs
crates/tb-hal/src/mem/organ/: selftests.rs
docs/: AGENTS-SPEC.md  ARCHITECTURE.md  BACKLOG.md  BENCHMARKS.md  DOCUMENTATION-STANDARD.md  KERNEL-FOUNDATION-SPEC.md  LANGUAGE-AND-STANDARDS.md  MEMORY-SPEC.md  MILESTONES.md  OPEN-QUESTIONS.md  PROCESS.md  RESEARCH-REPORT.md  ROADMAP-V2.md  RUN-THE-HELLO.md  SELF-IMPROVEMENT-SPEC.md  SOVEREIGNTY-L2-ROADMAP.md  SOVEREIGNTY-ROADMAP.md  SOVEREIGNTY.md  TRY-IT.md  VISION.md  assumptions.md  index.md
docs/plans/: INDEX.md  aarch64-el2-nvhe-world-switch.md  aarch64-tb-boot-producer.md  kani-encoder-parser-harnesses.md  l2.0-real-vmlaunch-proof.md  l2.1-ept-violation-handling.md  l2.2-must-exit-set.md  l2.3-devmodel-tb-core-crate.md  m11-kani-rights-subset.md  m14-blocking-recv-sched-integration.md  m14-byte-payload-ipc.md  m29-stage-c-kani-budget-plan.md  m29-stage-c-plan.md  miri-tier0-gate.md  sovereignty-plan.md
docs/proposals/: M20-durable-persistence.md  M21-kan-policy.md  M22-memory-provenance.md  M23-experience-codec.md  M24-honest-gate.md  M25-operator-transcript.md  M26-exit-telemetry.md  M27-hal-implementation-plan.md  M27-sovereign-scheduler.md  M28-operator-inbound.md  M29-crypto-mac.md  M30-infer-transport.md  M31-real-infer.md  M32-local-infer.md  M33-prov-lineage.md  M38-conductor.md  M39-experience-corpus.md  M40-recall-leaf.md  aL2.4b-full-kernel-guest.md  boot-profiles.md  extraction-plan.md  forward-plan.md  index.md  industrial-boot.md  model-path-phase2.md  yuva-abi.md
docs/research/: al2.4b-full-kernel-guest-literature.md  b3-pure-rust-engine-literature.md  b3-pure-rust-engine.md  cogi-cognitive-architecture.md  kan-policy-literature.md  kan-turboquant-eval.md  m23-experience-literature.md  m24-honest-gate-literature.md  m25-operator-transcript-literature.md  m26-exit-telemetry-literature.md  m27-sovereign-scheduler-literature.md  m28-operator-inbound-literature.md  m29-crypto-mac-literature.md  m30-infer-transport-literature.md  m31-real-infer-literature.md  m32-local-infer-literature.md  m33-prov-lineage-literature.md  trinity-coordinator-analysis.md  x86-flake-71-rootcause.md
docs/spec/: corpus-format-v1.md  yuva-abi-negotiation-v1.md  yuva-abi-v1.md
kernel/: Cargo.toml
kernel/linker/: aarch64.ld  x86_64.ld
kernel/src/: bootreport.rs  main.rs  profile.rs
scripts/: bench-boot.sh  check-agent-neutral.sh  conductor-adjudicate.sh  demo.sh  empty-diff-proof.sh  gen-witness-census.sh  kani-shards.sh  m32-adjudicate.sh  project.env  run-aarch64.sh  run-abi-conformance.sh  run-compileout-poc-x86_64.sh  run-compileout-x86_64.sh  run-substrate-x86_64.sh  run-vmm-x86_64.sh  run-x86_64.sh  test-industrial-boot.sh  verify-caps.sh  verify-encode.sh  witness-census.txt
targets/: aarch64-yuva-none.json  x86_64-tabos-none.json  x86_64-yuva-none.json
tb-vmm/: Cargo.toml  README.md
tb-vmm/src/: cli.rs  device.rs  error.rs  infer_host.rs  loader.rs  main.rs  memory.rs  report.rs  serial.rs  virtio_mmio.rs  vmm.rs
tb-vmm/src/arch/: mod.rs
tb-vmm/src/arch/x86_64/: boot.rs  mod.rs
tools/conductor-host/: Cargo.toml
tools/conductor-host/src/: main.rs
tools/corpus-export/: Cargo.toml
tools/corpus-export/src/: main.rs
tools/infer-daemon/: Cargo.toml
tools/infer-daemon/llama-engine-sys/: Cargo.toml  build.rs
tools/infer-daemon/llama-engine-sys/shim/: engine_shim.cpp
tools/infer-daemon/llama-engine-sys/src/: lib.rs
tools/infer-daemon/src/: engine.rs  main.rs  pins.rs  witness.rs  worker.rs
tools/prov-signer/: Cargo.toml
tools/prov-signer/src/: main.rs
tools/recall-bench/: Cargo.toml  README.md  eval_all.py  prep_bench.py
tools/recall-bench/src/: main.rs
tools/xport-core/: Cargo.toml
tools/xport-core/src/: lib.rs
tools/xport-harness/: Cargo.toml
tools/xport-harness/src/: live.rs  main.rs
(+45 files in other folders)
