# TABOS Cargo workspace root.
#
# Two members only at M0 (boot bring-up):
#   - crates/tb-hal : the ONLY crate allowed to contain `unsafe` + assembly.
#   - kernel        : `#![forbid(unsafe_code)]`-class safe Rust (its rust_main +
#                     #[panic_handler] shim is the sole permitted exception,
#                     because `#[unsafe(no_mangle)]` is an unsafe *attribute*).
#
# Built for the none-class custom targets under /targets via -Zbuild-std; see
# .cargo/config.toml and BUILD.md.

[workspace]
resolver = "2"
members = [
    "crates/tb-boot",
    # M11 proof: the host-verifiable capability core (Rights algebra + generic
    # CapTable). Listed BEFORE tb-hal, which re-exports it and wraps
    # CapTable<Rc<Object>>. Builds for the HOST triple under plain cargo (no
    # build-std), so `cargo kani -p tb-caps-core` works cleanly.
    "crates/tb-caps-core",
    # Task #49 proof: the host-verifiable PURE encoder/validator leaf (no_std +
    # forbid(unsafe_code) + zero deps). Holds the VMX control-MSR adjust, the
    # CR0/CR4 clamp, the TSS-base decode, the page-table/EPT entry encoders, and
    # the IPC frame codec as pure safe Rust; tb-hal CALLS them and keeps the
    # silicon-unsafe store byte-identical. Builds for the HOST triple under plain
    # cargo, so `cargo kani -p tb-encode` model-checks the EXACT SAME encoders.
    "crates/tb-encode",
    "crates/tb-hal",
    "kernel",
]
# tb-vmm is a host (std) VMM and is its OWN nested workspace (see tb-vmm/Cargo.toml
# [workspace]). It is intentionally NOT a member here so the no_std kernel
# workspace and the std host crate keep separate Cargo.lock files and never
# cross-contaminate build-std / target settings. tb-vmm depends on crates/tb-boot
# by path, which is allowed across workspaces.
exclude = ["tb-vmm"]

# panic = abort everywhere. The custom target specs in /targets already set
# "panic-strategy": "abort" (so -Zbuild-std rebuilds core without unwinding and
# we need no eh_personality), but pinning it in the profiles keeps the kernel
# binary consistent regardless of how it is invoked.
# Source: https://os.phil-opp.com/minimal-rust-kernel/ (panic-strategy section).
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# Smaller, deterministic boot image for the M0 DoD serial assertion.
opt-level = "s"
lto = true
