# yuva-kernel: the M0 boot image.
#
# `#![no_std] #![no_main]` binary whose entry (`_start`) is provided by tb-hal's
# per-arch boot trampoline; tb-hal then calls our `rust_main`. The DoD marker
# "hello from rust_main\n" is emitted from src/main.rs over tb-hal serial.

[package]
name = "yuva-kernel"
version = "0.1.0"
edition = "2021"
publish = false

# Default binary target is src/main.rs with name = package name ("yuva-kernel"),
# so the ELF lands at target/<triple>/<profile>/yuva-kernel — the path the
# scripts/run-*.sh runners receive as $1.

# Boot Profiles stage-B compile-out (docs/proposals/boot-profiles.md §11):
# `agent-organs` is a kernel-crate-local feature, DEFAULT-ON. Because it is on by
# default, EVERY existing build/CI invocation (`cargo kbuild` with no --features
# flag) is byte-identical — the SP#4 M38 conduct head is preserved by
# construction. Building `--no-default-features` compiles OUT every SELF-CONTAINED
# agent organ: each `#[cfg(feature = "agent-organs")]` site in kernel/src/main.rs
# removes that organ's whole if/else (and its co-gated helpers), so each marker
# literal is ABSENT from the image (no skip form either) and its
# `tb_hal::*_selftest` + `tb_encode::*` compute path becomes unreferenced +
# DCE-eligible. The self-contained set (14 organs) is M13, M16, M17, M18, M18.1,
# M18.2, M21, M22, M23, M24, M26, M33, M39, M40. The PIPELINE cluster (M25, M28,
# M30, M31 both legs, M32-local, M38) is DELIBERATELY EXCLUDED — those blocks bind
# values later folds consume, so they stay built + runtime-gated (the two grammars
# coexist). The string-absence proof is in scripts/run-compileout-x86_64.sh. Full
# stage B (the crate-level organ gate + the mem/ engine/organ factorization + an
# image-size delta) remains the open, named successor and is NOT claimed here.
[features]
default = ["agent-organs"]
agent-organs = []

[dependencies]
tb-hal = { path = "../crates/tb-hal" }
# MV / tb-boot v0: the shared boot-ABI crate (no_std, forbid(unsafe_code)).
# The kernel uses its `TB_BOOT_MAGIC` constant to recognise when the project's
# own `tb-vmm` booted it through the tb-boot contract (see src/main.rs). tb-hal
# performs the single guarded raw read of the boot-info pointer; this
# forbid(unsafe_code)-class crate only compares the returned magic.
tb-boot = { path = "../crates/tb-boot" }
# Industrial Boot (#106): the brand crate is the single source of truth for the
# product name in the pretty boot banner + the `yuva.console=`/`yuva.view=`
# cmdline keys (composed from `BRAND_LOWER`).
brand = { path = "../crates/brand" }
