# tb-hal: TABOS Hardware Abstraction Layer.
#
# Framekernel rule (ARCHITECTURE.md / KERNEL-FOUNDATION-SPEC.md §1): this is the
# ONLY crate permitted to contain `unsafe`, `asm!`, `naked_asm!` or
# `global_asm!`. Everything above it is safe Rust. At M0 it exposes exactly four
# safe functions (serial_init / serial_write_byte / serial_write_str / halt);
# the per-arch boot trampolines + UART pokes live in src/arch/<arch>/.

[package]
name = "tb-hal"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# Default rlib; linked into the kernel binary, which pulls in the per-arch
# global_asm!/_start. No_std is declared in src/lib.rs.

[dependencies]
# M6: the shared boot-handoff ABI (no_std, forbid(unsafe_code)). tb-hal's
# x86_64 frame-allocator boot-map reader parses a tb-vmm `TbBootInfo` using the
# crate's typed `#[repr(C)]` readers + constants instead of hand-coded offsets.
# No cycle: tb-boot depends on nothing; the kernel already depends on both.
tb-boot = { path = "../tb-boot" }

# M11: the host-verifiable capability core (no_std, forbid(unsafe_code)). tb-hal
# re-exports its `Rights`/`Handle`/`SysStatus` verbatim and wraps its generic
# `CapTable<Rc<Object>>`, so the kernel and the Kani harnesses verify the EXACT
# SAME rights/slot/generation logic (zero model drift).
tb-caps-core = { path = "../tb-caps-core" }
